--- a/MVC/Resort_Management_System_MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Resort_Management_System_MVC/Views/Shared/_Layout.cshtml
@@ -68,6 +68,18 @@
                             </a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Booking" asp-action="BookingList">
+                                Booking
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Staff" asp-action="StaffList">
+                                Staff
+                            </a>
+                        </li>
+
 
                     </ul>
                 </div>
