--- a/MVC/Resort_Management_System_MVC/Views/Payment/PaymentList.cshtml
+++ b/MVC/Resort_Management_System_MVC/Views/Payment/PaymentList.cshtml
@@ -7,7 +7,7 @@
 	var reservations = ViewBag.Reservations as List<Resort_Management_System_MVC.Models.ReservationModel> ?? new();
 }
 
-<a asp-action="PaymentAddEdit" asp-controller="Payment" class="btn btn-primary mb-3" onclick="return confirm('Are you sure you want to add a Payment Detail?');">
+<a asp-action="PaymentAddEdit" asp-controller="Payment" class="btn btn-primary mb-3">
 	Add Payment
 </a>
 
