--- a/MVC/Resort_Management_System_MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Resort_Management_System_MVC/Views/Shared/_Layout.cshtml
@@ -259,8 +259,12 @@
     <!-- Favicon -->
     <link rel="icon" href="@Url.Content("~/img/core-img/favicon.ico")">
 
+    @RenderSection("Styles", required: false)
+
     <!-- Core Stylesheet -->
-    <link rel="stylesheet" href="@Url.Content("~/style.css")" />
+    <link rel="stylesheet" href="~/style.css" asp-append-version="true" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
@@ -275,7 +279,7 @@
     <header class="header-area">
         <div class="palatin-main-menu">
             <div class="classy-nav-container breakpoint-off">
-                <div class="container">
+                <div class="container-fluid">
                     <nav class="classy-navbar justify-content-between" id="palatinNav">
                         <!-- Nav brand -->
                         <a href="@Url.Content("~/index.html")" class="nav-brand"><img src="@Url.Content("~/img/core-img/logo.png")" alt=""></a>
@@ -297,7 +301,12 @@
                                     <li>
                                         <a href="#">Pages</a>
                                         <ul class="dropdown">
-                                            <li><a href="@Url.Content("~/index.html")">Home</a></li>
+                                            <li>
+                                            @* <a href="@Url.Content("~/index.html")">Home</a> *@
+                                             <a class="nav-link text-dark" asp-controller="Guest" asp-action="GuestList"> 
+                                            Guest 
+                                            </a> 
+                                            </li>
                                             <li><a href="@Url.Content("~/about-us.html")">About Us</a></li>
                                             <li><a href="@Url.Content("~/services.html")">Services</a></li>
                                             <li><a href="@Url.Content("~/rooms.html")">Rooms</a></li>
@@ -321,7 +330,7 @@
     </header>
     <!-- ##### Header Area End ##### -->
 
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -370,7 +379,9 @@
     <script src="@Url.Content("~/js/plugins/plugins.js")"></script>
     <script src="@Url.Content("~/js/active.js")"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
