--- a/MVC/Resort_Management_System_MVC/wwwroot/scss/_theme_color.scss
+++ b/MVC/Resort_Management_System_MVC/wwwroot/scss/_theme_color.scss
@@ -30,3 +30,6 @@ $footer-color: #363636;
 
 // Secondary Color
 $secondary-color: #838383;
+
+$pri-color: #3498db; // main button background color
+$pri-color-dark: #2980b9; // hover color
