--- a/MVC/Resort_Management_System_MVC/Views/Home/Index.cshtml
+++ b/MVC/Resort_Management_System_MVC/Views/Home/Index.cshtml
@@ -302,8 +302,10 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris sceleri sque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus. Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
         </div>
         <h4 class="wow fadeInUp" data-wow-delay="300ms">Los Angeles 1481 Creekside Lane Avila Beach, CA 931</h4>
-        <h5 class="wow fadeInUp" data-wow-delay="400ms">+53 345 7953 32453</h5>
-        <h5 class="wow fadeInUp" data-wow-delay="500ms">yourmail@gmail.com</h5>
+        <h5 class="wow fadeInUp" data-wow-delay="400ms">+91 78598 63216</h5>
+        <h5 class="wow fadeInUp" data-wow-delay="400ms">+91 99253 98105</h5>
+        <h5 class="wow fadeInUp" data-wow-delay="500ms">riyabhimani.me@gmail.com</h5>
+        <h5 class="wow fadeInUp" data-wow-delay="500ms">shrutizalariya@gmail.com</h5>
         <!-- Social Info -->
         <div class="social-info mt-50 wow fadeInUp" data-wow-delay="600ms">
             <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
