--- a/MVC/Resort_Management_System_MVC/Views/Guest/GuestList.cshtml
+++ b/MVC/Resort_Management_System_MVC/Views/Guest/GuestList.cshtml
@@ -3,10 +3,15 @@
 	ViewData["Title"] = "Guest List";
 }
 
+@{
+	Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+
 <div class="resort-page-container">
 	<div class="guest-card shadow">
 		<div class="d-flex justify-content-between align-items-center mb-4">
-			<h3 class="m-0" style="color:#cb8670">Guest List</h3>
+			<h3 class="m-0" style="color:#cb8670"><b>Guest List</b></h3>
 
 			<div class="text-end mb-3">
 				<a asp-action="GuestAddEdit" asp-controller="Guest" class="btn resort-btn"
@@ -136,7 +141,7 @@
 		}
 
 		.resort-page-container {
-			padding-top: 140px; /* Try 80px–120px depending on nav height */
+			padding-top: 40px; /* Try 80px–120px depending on nav height */
 			padding-bottom: 60px;
 			background-color: #ffffff;
 			min-height: calc(100vh - 160px);
