--- a/MVC/Resort_Management_System_MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Resort_Management_System_MVC/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body style="padding-top: 150px;">
     <!-- Preloader -->
     <div class="preloader d-flex align-items-center justify-content-center">
@@ -170,3 +171,11 @@
 
 </body>
 </html>
+@if (Context.Session.GetString("UserRole") == "Admin")
+{
+    <li><a href="/User/UserList">Manage Users</a></li>
+}
+@if (Context.Session.GetString("UserRole") == "Guest")
+{
+    <li><a href="/Booking/MyBookings">My Bookings</a></li>
+}
